# pips

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  manifest.xml  test.json
.github/workflows/: build.yml
docs/: AddingFunctions.md  ExampleWriter.md  ImplementedFunctions.md  PipsLint.md
example_writer/: example_writer.hpp
examples/: combined.json  data.json  follow.json  follow_relative.json  out.json  out4.json  out_relative_small.json  simple_atk.json  test_ex.json  test_labmeeting_july2.json  vKjPHTjEZVeVmtKPlhvY.json  vec_test.json
experiments/cobot_doors_greedy/dipr/: GoAlone_Halt.json  Halt_GoAlone.json  Halt_Halt.json
experiments/cobot_doors_nice/dipr/: GoAlone_Halt.json  Halt_GoAlone.json  Halt_Halt.json
experiments/greedy/dipsl3/: Follow_Follow.json  Follow_GoAlone.json  GoAlone_Follow.json  GoAlone_Halt.json  Halt_Follow.json  Halt_GoAlone.json  Pass_Follow.json  Pass_GoAlone.json
experiments/greedy/evals/: sp.fh_ep.ld_hs.1.5_hc.1.json  sp.fh_ep.ld_hs.1.5_hc.10.json  sp.fh_ep.ld_hs.1.5_hc.15.json  sp.fh_ep.ld_hs.1.5_hc.5.json  sp.fh_ep.ld_hs.1.5_hc.8.json  sp.fh_ep.ld_hs.1_hc.1.json  sp.fh_ep.ld_hs.1_hc.10.json  sp.fh_ep.ld_hs.1_hc.15.json  sp.fh_ep.ld_hs.1_hc.5.json  sp.fh_ep.ld_hs.1_hc.8.json  sp.fh_ep.ld_hs.2_hc.1.json  sp.fh_ep.ld_hs.2_hc.10.json  sp.fh_ep.ld_hs.2_hc.15.json  sp.fh_ep.ld_hs.2_hc.5.json  sp.fh_ep.ld_hs.2_hc.8.json  sp.fh_ep.rd_hs.1.5_hc.1.json  sp.fh_ep.rd_hs.1.5_hc.10.json  sp.fh_ep.rd_hs.1.5_hc.15.json  sp.fh_ep.rd_hs.1.5_hc.5.json  sp.fh_ep.rd_hs.1.5_hc.8.json  sp.fh_ep.rd_hs.1_hc.1.json  sp.fh_ep.rd_hs.1_hc.10.json  sp.fh_ep.rd_hs.1_hc.15.json  sp.fh_ep.rd_hs.1_hc.5.json  sp.fh_ep.rd_hs.1_hc.8.json  sp.fh_ep.rd_hs.2_hc.1.json  sp.fh_ep.rd_hs.2_hc.10.json  sp.fh_ep.rd_hs.2_hc.15.json  sp.fh_ep.rd_hs.2_hc.5.json  sp.fh_ep.rd_hs.2_hc.8.json  sp.fh_ep.rm_hs.1.5_hc.1.json  sp.fh_ep.rm_hs.1.5_hc.10.json  sp.fh_ep.rm_hs.1.5_hc.15.json  sp.fh_ep.rm_hs.1.5_hc.5.json  sp.fh_ep.rm_hs.1.5_hc.8.json  sp.fh_ep.rm_hs.1_hc.1.json  sp.fh_ep.rm_hs.1_hc.10.json  sp.fh_ep.rm_hs.1_hc.15.json  sp.fh_ep.rm_hs.1_hc.5.json  sp.fh_ep.rm_hs.1_hc.8.json  (+35 more)
experiments/greedy_door/synth/: Follow_GoAlone.json  Follow_Halt.json  Follow_Pass.json  GoAlone_Follow.json  GoAlone_GoAlone.json  GoAlone_Halt.json  Halt_Follow.json  Halt_GoAlone.json
experiments/greedy_srtr/srtr/: Follow_Follow.json  Follow_GoAlone.json  Follow_Halt.json  Follow_Pass.json  GoAlone_Follow.json  GoAlone_GoAlone.json  GoAlone_Halt.json  Halt_Follow.json  Halt_GoAlone.json  Halt_Halt.json  Pass_Pass.json
experiments/nice/dipsl3/: Follow_Halt.json  GoAlone_GoAlone.json  GoAlone_Halt.json  Halt_Follow.json  Halt_GoAlone.json  Halt_Halt.json
experiments/nice/evals/: sp.fh_ep.ld_hs.1.5_hc.1.json  sp.fh_ep.ld_hs.1.5_hc.10.json  sp.fh_ep.ld_hs.1.5_hc.15.json  sp.fh_ep.ld_hs.1.5_hc.5.json  sp.fh_ep.ld_hs.1.5_hc.8.json  sp.fh_ep.ld_hs.1_hc.1.json  sp.fh_ep.ld_hs.1_hc.10.json  sp.fh_ep.ld_hs.1_hc.15.json  sp.fh_ep.ld_hs.1_hc.5.json  sp.fh_ep.ld_hs.1_hc.8.json  sp.fh_ep.ld_hs.2_hc.1.json  sp.fh_ep.ld_hs.2_hc.10.json  sp.fh_ep.ld_hs.2_hc.15.json  sp.fh_ep.ld_hs.2_hc.5.json  sp.fh_ep.ld_hs.2_hc.8.json  sp.fh_ep.rd_hs.1.5_hc.1.json  sp.fh_ep.rd_hs.1.5_hc.10.json  sp.fh_ep.rd_hs.1.5_hc.15.json  sp.fh_ep.rd_hs.1.5_hc.5.json  sp.fh_ep.rd_hs.1.5_hc.8.json  sp.fh_ep.rd_hs.1_hc.1.json  sp.fh_ep.rd_hs.1_hc.10.json  sp.fh_ep.rd_hs.1_hc.15.json  sp.fh_ep.rd_hs.1_hc.5.json  sp.fh_ep.rd_hs.1_hc.8.json  sp.fh_ep.rd_hs.2_hc.1.json  sp.fh_ep.rd_hs.2_hc.10.json  sp.fh_ep.rd_hs.2_hc.15.json  sp.fh_ep.rd_hs.2_hc.5.json  sp.fh_ep.rd_hs.2_hc.8.json  sp.fh_ep.rm_hs.1.5_hc.1.json  sp.fh_ep.rm_hs.1.5_hc.10.json  sp.fh_ep.rm_hs.1.5_hc.15.json  sp.fh_ep.rm_hs.1.5_hc.5.json  sp.fh_ep.rm_hs.1.5_hc.8.json  sp.fh_ep.rm_hs.1_hc.1.json  sp.fh_ep.rm_hs.1_hc.10.json  sp.fh_ep.rm_hs.1_hc.15.json  sp.fh_ep.rm_hs.1_hc.5.json  sp.fh_ep.rm_hs.1_hc.8.json  (+35 more)
experiments/nice_dipr/: merged.json
experiments/nice_doors/synth/: Follow_Follow.json  Follow_GoAlone.json  GoAlone_Follow.json  GoAlone_Halt.json  (+2 more)
experiments/nice_srtr/: merged.json
ops/: all_ops.json  arith_only.json  emdips_operations.json  leading_human.json  num_only.json  reduced_ops.json  social_ref.json  test_ops.json  vec_only.json
scripts/: attacker-data-corl.txt  attackerToJson.py  deflection-data-corl.txt  deflection.json  deflectionToJson.py  format_all.sh  passingToJson.py
src/: april_listener.cpp  ast.cpp  ast.hpp  cedr.cpp  dipr.cpp  emdips-l3.cpp  emdips.cpp  enumeration.cpp  enumeration.hpp  idips.cpp  lang.cpp  lang.hpp  laser_segmentation_main.cc  ldips-l3.cpp  library_functions.cpp  library_functions.hpp  library_functions_tests.cpp  main.cpp  parsing.cpp  parsing.hpp  person_listener.cpp  pipslint.cpp  pretty_print.cpp  rulePIPS.cpp  srtr.cpp  test_save.cpp  traceon.cpp
src/ast/: ast.cpp  ast.hpp  enumeration.cpp  enumeration.hpp  library_functions.cpp  library_functions.hpp  library_functions_tests.cpp  parsing.cpp  parsing.hpp  synthesis.cpp  synthesis.hpp
src/optimizer/: optimizer.py  optimizer_runner.py  optimizer_settings.py
src/policy/: demo_watcher.cpp  greedy_ref.cpp  mpdm_demo.cpp  mpdm_ref.cpp  mpdm_synth.cpp  new_ref.cpp  social_demo.cpp  social_interp.cpp  social_lib.cpp  social_lib.h  social_ref.cpp
src/sketch_runner/: main.cpp
src/utils/: nd_bool_array.cpp  nd_bool_array.hpp
src/visitors/: deepcopy_visitor.cpp  deepcopy_visitor.hpp  deepcopy_visitor_tests.cpp  feature_builder.cpp  feature_builder.hpp  fillhole_visitor.cpp  fillhole_visitor.hpp  interp_visitor.cpp  interp_visitor.hpp  perturb_visitor.cpp  perturb_visitor.hpp  print_visitor.cpp  print_visitor.hpp  problemgen_visitor.cpp  problemgen_visitor.hpp  tosmtlib_visitor.cpp  tosmtlib_visitor.hpp  trace_visitor.cpp  trace_visitor.hpp
synthd/cobot/: Follow_Follow.json  Follow_GoAlone.json  Follow_Halt.json  GoAlone_Follow.json  GoAlone_Halt.json  Halt_Follow.json  Halt_GoAlone.json  Halt_Halt.json
synthd/ref_clone/: Follow_GoAlone.json  Follow_Halt.json  GoAlone_Follow.json  GoAlone_Halt.json  Halt_Follow.json  Halt_GoAlone.json  transitions.txt
(+9 files in other folders)
